--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body {
   max-width: 1200px;
   margin: auto;
 }
+
+/* header */
+
 .header {
   display: flex;
   align-items: center;
@@ -58,8 +61,13 @@ body {
   margin-right: 6px;
 }
 
+/* end header */
+
+/* promo section */
+
 .promo {
   margin-top: 36px;
+  margin-bottom: 56px;
   filter: drop-shadow(0px 7px 12px rgba(158, 158, 163, 0.1));
   background: #FFF1B8 url(../img/promo-img.png) no-repeat top -100px right -200px /800px;
   border-radius: 10px;
@@ -78,7 +86,24 @@ body {
   line-height: 28px;
   color: #302C34;
 }
+
+/* end promo section */
+
+/* restaurants section */
+
 .input-search {
   background-image: url(../img/search.svg);
   width: 300px;
+}
+.section-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  color: #000000;
+  margin: 0;
 }
