--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   background-position: left 11px center;
 }
 .input-address {   
-  width: 690px;
+  flex: 0.8;
   height: 40px;
   background-image: url(../img/home.svg);
 }
@@ -62,6 +62,10 @@ body {
 }
 
 /* end header */
+
+.main {
+  background: linear-gradient(180deg, rgba(245, 245, 245, 0) 1.04%, #F5F5F5 100%);
+}
 
 /* promo section */
 
@@ -124,6 +128,7 @@ body {
   border-radius: 7px;
   overflow: hidden;
   margin-bottom: 30px;
+  flex-basis: 31%;
 }
 .card-image {
   width: 384px;
@@ -159,6 +164,7 @@ body {
 .card-info {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 .rating {
   margin-right: 26px;
@@ -176,6 +182,11 @@ body {
 .price {
   margin-right: 10px;
 }
+.category {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
 .price:after {
   content: "";
   width: 5px;
@@ -185,4 +196,134 @@ body {
   vertical-align: middle;
   border-radius: 50%;
   margin-left: 10px;
+}
+
+/* footer */
+.footer {
+  padding: 60px 0;
+}
+.footer-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-link {
+  display: inline-block;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #595959;
+  text-decoration: none;
+}
+.footer-link:not(:last-child) {
+  margin-right: 15px;
+}
+.footer-nav {
+  margin-right: auto;
+  margin-left: 35px;
+}
+.social-links {
+  display: flex;
+  align-items: center;
+}
+.social-link:not(:last-child) {
+  margin-right: 21px;
+}
+
+@media (max-width: 1366px) {
+  .container {
+    max-width: 960px;
+  }
+  .promo {
+    background-size: 750px;
+    background-position: center top right -300px;
+  }
+  .rating {
+    margin-right: 15px;
+  }
+  .category, .price {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+  .promo {
+    padding: 50px;
+    background-size: 500px;
+    background-position: center right -200px;
+  }
+  .promo-text {
+    font-size: 18px;
+    max-width: 400px;
+  }
+  .card {
+    flex-basis: 47%;
+  }
+  .footer-link {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+  .input-address {
+    max-width: 35%;
+  }
+  .rating {
+    flex-basis: 100%;
+  }
+  .card-info {
+    flex-wrap: wrap;
+  }
+  .card-title {
+    font-size: 18px;
+  }
+  .promo-title {
+    font-size: 24px;
+    line-height: 1.4;
+  }
+  .promo {
+    background-size: 400px;
+  }
+}
+
+@media (max-width: 578px) {
+  .container {
+    width: 90%;
+  }
+  .header {
+    flex-wrap: wrap;
+  }
+  .input-address {
+    order: 5;
+    margin-top: 15px;
+    max-width: 100%;
+    flex: 1;
+  }
+  .promo {
+    background-image: none;
+    padding: 30px;
+    margin-bottom: 46px;
+  }
+  .promo-title {
+    margin-bottom: 10px;
+  }
+  .section-heading {
+    margin-bottom: 15px;
+  }
+  .section-title {
+    font-size: 28px;
+  }
+  .card {
+    flex-basis: 90%;
+    margin: 20px auto;
+  }
+  .card-image {
+    width: 100%;
+  }
 }
