--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,88 @@ body {
   margin-right: 21px;
 }
 
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+}
+.modal-dialog {
+  max-width: 780px;
+  width: 95%;
+  min-height: 552px;
+  background: #FFFFFF;
+  border-radius: 5px;
+  margin: auto;
+  padding: 40px 45px;;
+}
+.modal-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 45px;
+}
+.modal-title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+}
+.close {
+  font-size: 36px;
+  border: none;
+  background-color: transparent;
+}
+.food-row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #D9D9D9;
+  margin-bottom: 15px;
+}
+.food-name {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 32px;
+}
+.food-price {
+  margin-left: auto;
+  margin-right: 47px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 32px;
+}
+.food-counter {
+  display: flex;
+  align-items: center;
+}
+.counter-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 39px;
+  height: 32px;
+  background: #FFFFFF;
+  border: 1px solid #40A9FF;
+  box-sizing: border-box;
+  border-radius: 2px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #40A9FF;
+}
+.counter {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 @media (max-width: 1366px) {
   .container {
     max-width: 960px;
