--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,9 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+.is-open {
   display: flex;
 }
 .modal-dialog {
@@ -295,6 +298,9 @@ body {
   font-size: 36px;
   border: none;
   background-color: transparent;
+}
+.modal-body {
+  margin-bottom: 52px;
 }
 .food-row {
   display: flex;
@@ -341,6 +347,24 @@ body {
   line-height: 24px;
   margin-left: 10px;
   margin-right: 10px;
+}
+.modal-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.modal-pricetag {
+  background: #262626;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: #FAFAFA;
+  padding: 15px 20px;
+}
+.footer-buttons {
+  display: flex;
+  align-items: center;
 }
 
 @media (max-width: 1366px) {
