--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,9 @@ body {
   .modal-footer {
     flex-wrap: wrap;
   }
+  .modal-pricetag {
+    margin-bottom: 15px;
+  }
 }
 
 @media (max-width: 355px) {
